--- a/ec2/template.yaml
+++ b/ec2/template.yaml
@@ -87,6 +87,13 @@ spec:
         description: This is ${{ parameters.name }}
         repoUrl: ${{ parameters.repoUrl }}
         repoVisibility: public
+    - id: register
+      name: Register
+      action: catalog:register
+      input:
+         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
+         catalogInfoPath: '/catalog-info.yaml'
+
   output:
     links:
       - title: Repository
